oh god hes alive

--- a/040.html
+++ b/040.html
@@ -35,7 +35,10 @@
 	<center>
 	<h1> FunnyManManFuMannnyMan </h1>
 	<span id="menulinks" class="blocked"> they4re in our mind</span>
-	<script src="links.js" type="text/javascript"></script>
+	<script src="links.js" type="text/javascript"></script><br><br>
+	<!--<marquee scrollamount="100">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
+	<marquee scrollamount="99">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
+	-->
 	</center>
 	<br>
 </div>
