--- a/404.html
+++ b/404.html
@@ -21,12 +21,42 @@
 	p{color:#ff8000}
 	.funnyman{
 		font-size: 500px;
+		position: relative;
 		text-shadow:
 		-25px -25px 0 #000,
 		25px 25px 0 #000,
 		25px -25px 0 #ffc83d,
-		-25px 25px 0 #ffc83d
-		}
+		-25px 25px 0 #ffc83d;
+	}
+	.fun{
+		animation: Uhoh 0.5s linear infinite;
+		z-index: 1;
+		position: absolute;
+		top: 0%;
+		width: 100%;
+		text-align: center;
+	}
+	.nym{
+		width: 100%;
+		height: auto;
+	}
+	.ann{
+		animation: Poop 10s linear infinite;
+		z-index: 2;
+		position: absolute;
+		top: 0%;
+		width: 100%;
+		text-align: center;
+	}
+    @keyframes Uhoh {
+         50% {opacity: 0;}
+    }
+    @keyframes Poop {
+         0% {opacity: 0;}
+         25% {opacity: 1;}
+         75% {opacity: 1;}
+         100% {opacity: 0;}
+    }
 	</style>
 </head>
 <body>
@@ -35,8 +65,18 @@
 	<br>
 	<center>
 	<h1> Four Hundred And Four </h1>
-	<span id="menulinks">well im in 4our mind</span>
+	<span id="menulinks">well im in 4our mind // HES ALIVE AGAIN HES ALIVE AGAIN</span>
 	<script src="links.js" type="text/javascript"></script>
+	<marquee scrollamount="6.25">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
+	<marquee scrollamount="12.5">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
+	<marquee scrollamount="25">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
+	<marquee scrollamount="50">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
+	<marquee scrollamount="100">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
+	<marquee scrollamount="50">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
+	<marquee scrollamount="25">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
+	<marquee scrollamount="12.5">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
+	<marquee scrollamount="6.25">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
+
 	</center>
 	<br>
 </div>
@@ -44,8 +84,13 @@
 <br><br>
 <a href="040.html"> Now Learn </a>
 <br>
-<span class="funnyman">🙂</span>
+<div class="funnyman">
+<div class="nym">😶</div>
+<div class="fun">🙂</div>
+<div class="ann">😠</div>
+</div>
 <br>
+
 <button onclick="history.back()" onmouseover="funny();">TURN BACK NOW</button>
 <div id="funny">
 <script>
@@ -58,6 +103,7 @@ function funny(){
 	a.appendChild(br);
 	setTimeout(funny, 100);
 }
+console.log('%cUPDATE-10-29-2022-HES-ALIVE-AGAIN', 'color:#ffc83d;font-size:100px;background-color:black');
 </script>
 </div>
 <p>don't destroy your pc challenge impossible</p>
