--- a/THETRUTH.html
+++ b/THETRUTH.html
@@ -2,7 +2,8 @@
 	<title>
     THE TRUTH - Mia's EPIC Site
     </title>
-	<meta name="description" content="The truth of Silver ShXXXXXXir">
+	<meta name="description" content="The truth of Silver ShÃƒâ€šÃ‚Â£ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â£r">
+	<link rel="icon" type="image/png" href="assets/RuinsSilver.png">
 	<style>
 	@font-face {
 		font-family: silver;
@@ -11,65 +12,106 @@
 	html, body {margin:0;padding:0;font-family: silver;}
 	img {margin:0;padding:0;}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #2a8000)}
-	.header {
+	/* .header {
 		background-image:radial-gradient(#794004 0%, #8e4b05 50%, #ffffff 50%);
-	}
+	} */
 	body {
-		background-color:black;
+		background-image:url(assets/truth.png);
+		background-size: 10%;
+		width: 500px;
+		margin: auto;
 	}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
 	a:visited{display:none;}
 	button{background-color: #626262}
 	h1{
-	    color: ffffff;
+	    color: 000000;
 		
 	}
+	.coldtruth{
+		background-color:#ffffff55;
+	}
 	.p1{
-	    color: white;
+	    color: black;
 	}
 	.p2{
-	    color: white;
+	    color: #000b80;
+		font-size: 50px;
+		font-family: "Times New Roman";
+	}
+	.p3{
+	    color: #006cd1;
+		font-family: "Lucida Console";
+		font-size: 30px;
+	}
+	.p4{
+	    color: #e67cc9;
+		font-family: "Lucida Console";
+		font-size: 20px;
+	}
+	.p5{
+	    color: #4f7a48;
+		font-size: 40px;
+		font-family: "Times New Roman";
+	}
+	.p6{
+	    color: #fff700;
+		font-size: 15px;
+		font-family: Arial
+	}
+	.p7{
+	    color: #4f1c4d;
+		font-family: "Times New Roman";
+		font-size: 32px;
+	}
+	.p8{
+	    color: #047300;
+		font-size: 23px;
+		font-family: "Times New Roman";
+	}
+	.p9{
+	    color: #a001aa;
+		font-size: 35px;
+		font-family: silver;
 	}
 	</style>
 </head>
-
-<div class="header">
-	<br>
+<br>
 	<center>
 	<h1> THE TRUTH BEHIND SILVER SHORTHAIR &dagger;</h1>
-	<span id="menulinks">The Truth Behind Behind</span>SILVER SHORTHAIR
+	<span id="menulinks">The Truth Behind Behind</span> <----- "SILVERS" LIES
 	<script src="links2.js" type="text/javascript"></script>
 	<br>
 <br>
 <br>
 <br>
 <p class="p1">THIS IS THE TRUTH BEHIND SILVER SHORTHAIR</p>
-<!--<script>
-let findow = false
-function silly(){
-	a = true
-	let findow = open('https://google.com', 'example', 'width=300,height=300');
-}
-findow.onblur = () => setTimeout(windowHandle.focus, 0);
-</script>-->
-<p onclick="silly();" class="p1">THIS IS THE TRUTH BE HIND SILVER SHORTHAIR</p>
+<p onclick="silly();" class="p2">THIS IS THE TRUTH BE HIND SILVER SHORTHAIR</p>
 </center>
-</div>
-<div class="header">
 <center>
 <br>
 <br>
-<img src="assets/ohgod2.png" width="50%" style="background-image: url('https://media.timeout.com/images/105222685/750/562/image.jpg');background-repeat: no-repeat;background-size: cover;">
+<div class="coldtruth">
+<p class="p9"><b>&dagger;&dagger;&dag</b>ger;<--- this is what SILVER The DEMON hides behind he hides behind this FORM he is the NOT THIS he is NOT THIS THIS IS A FAKE AN ILLUSION THIS IS NOT THE REAL PERSON THIS IS NOT REAL A DEMON IS HIDNIG BEHIND THIS YOU CANOT SE HIM BUT HE IS IA DEMON AND YOU SHOULD NOT TRUST HIM DO NOT TRUST HIM TO NO  D TRUSH HIM HE OT TIRSH HIM OD NOT TRUSH TH DO NOT TRUST THIS MAN (aka. Etc)    )) )  [sic]</p>
+<p class="p8">if you are READING this and you AGREE With the what i say then plea CONTACT ME at <span id="email">😀</span> and we can ARRANGE a meeting and we can Discuss and TAKE ACTION to the SILVER DEMOS ! ! </p>
+<p class="p7">"cats" are DOMANS sent from h*ll to RUIN our lives and fill them with SIN and GREED, but someimes the DEMONS fuck it up  (really Bad) this sometimes and okay and it sometimes this happens and this is why there is a "SIVLER SHORHTAIR" he is a cat but they accidently made him made of PAPER! Oopsies! THEY ARE STUPID! AND DEMON! </p>
+<p class="p6">i don't relaly understand "ppare cat"</p>
+</div>
+<p class="p5">You may havbe heard of silvers suppsoed breed being "British Silver Shortahir' but ijn reality this is merely a coverup to hide his otherwise blatant and obvious true identity of one of the "british Big Cats" (Ak.a ABCs, phanton cats,  etc)  These of race are big cats that used to prowel the earth. and they STILL EXIST but "sicentists" say they AREN"T EXIST! BOO SCIE BN!</p>
+<p class="p4">silvershorthair is a time traveller from another dimenson who is here to take all the money from the libertarian party and to defund the police and to make abortions legal and we must stop him by spreading this word to 10 sites and he is a demonic entity possessing a a4 sheat of paper because he has no organs and he </p>
+<p class="p3">"Silver Shorthair" AS you MAY know him exists since aLL Of time and he appears IN LOTs of Media since the DAWN OF TIME and it was CREATED by the 9 ONAGON SAGES and it is CURSED and you SHOULDN"T INTERACT WITH IT. He is a Pieceo f paper resembLing a cat and that shouldn't happen and is illogical and dumb. Silver shouldn't exist as he is flat and therefore he has no, ORGANS and therefore the only LOGICAL expliNATION os that he is POSSSED; by some EVIL ENTITY and thats BAD because he will BETRAY YOU and HE WILL AT NO END SEEK TO DESTRYOY YOU AND KILL YOU FOR HIS OWN PERSON AL GAINS!!! ! !</p>
+<img src="assets/ohgod2.png" width="480px" style="background-image: url('https://media.timeout.com/images/105222685/750/562/image.jpg');background-repeat: no-repeat;background-size: cover;">
 <br>
+<i>Above: proof that "SILVER SHORTHAIR" is a time traveling DEAMON!!!! (photo credit: wikipedia, i think)</i>
 <h2>™™©™™™™™™™™™™™™™™™®™</h2>
 </center>
-</div>
 like an idiot, like an idiot
 <!-- <div class="footer">
 <br><br><br><br><br>
 </div> --> 
 <script>
+let text;
 	function fart(){
 		document.title = "THE TRUTH BEHIND SILVER SHORTHAIR VOL."+Math.round(Math.random()+Math.random()+Math.random()*Math.random()+Math.random());
 		if (Math.random() < 0.1) {
@@ -81,7 +123,23 @@ like an idiot, like an idiot
 		} else {
 			console.error("Cannot send SILVER request to "+Math.floor(Math.random() * (200 - 1) + 1)+"."+Math.floor(Math.random() * (150 - 1) + 1)+"."+Math.floor(Math.random() * (99 - 1) + 1)+"."+Math.floor(Math.random() * (99 - 1) + 1));
 		}
+		if (Math.random() < 0.05) {
+		text = "silver@birdlover.com";
+		} else if (Math.random() < 0.05){
+		text = "silver@hilarious.com";
+		} else if (Math.random() < 0.05){
+		text = "silver@politician.com";
+		} else {
+		text = "silver@religious.com";
+		}
+		document.getElementById("email").innerHTML = text;
 		setTimeout(fart, 100);
-	}	
-	fart()
+	}
+fart()
+let findow = false
+function silly(){
+	a = true
+	let findow = open('https://silvershorthair.com', 'A', 'width=300,height=300');
+}
+findow.onblur = () => setTimeout(findow.focus, 1);
 </script>
