--- a/aboutthem.html
+++ b/aboutthem.html
@@ -6,6 +6,7 @@
 	<script>
 	console.log("%c$WHY_ are you so !?!?!?Dead_nside_______", "font-size:4rem;background-image: repeating-linear-gradient(45deg,#55CDFC,#55CDFC 50px,#F7A8B8 50px,#F7A8B8 100px,#FFFFFF 100px,#FFFFFF 150px,#F7A8B8 150px,#F7A8B8 200px,#55CDFC 200px);");
 	</script>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 	<style>
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
@@ -21,11 +22,7 @@
 	button{background-color: #00ff00}
 	h1{
 	    color: white;
-		text-shadow:
-		-2px -2px 0 #55CDFC,
-		2px -2px 0 #000000,
-		-2px 2px 0 #F7A8B8,
-		2px 2px 0 #FFFFFF;  
+		font-family: "Audiowide", sans-serif;
 	}
 	.othersilly{
 	    color: #BCBCBC;
@@ -167,6 +164,8 @@
 
 <br>
 <p class="p1"><span title="in a freak accident involving 14 casualties and 12 injured 🙁">got sillied)got sillied)got sillied)got sillied)got sillied)got sillied)</span></p> 
+<h1> Here Are Some things About me </h1>
+<br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death
 <div class="otherothersilly">
 <br>
 <br>
@@ -220,6 +219,7 @@
 <br>
 <br>
 <br>
+<a href="abouthim.html" class="links">Chec  k MATE LIBerals!!!! ! !😂😂😂😂😂😂😂😂😂😂😂😂😂😂😂😂😂😂😂😂😂😂</a>
 <br>
 <br>
 <br>
