just look inside andyou will find
The Pokemon

--- a/aboutthem.html
+++ b/aboutthem.html
@@ -164,8 +164,9 @@
 
 <br>
 <p class="p1"><span title="in a freak accident involving 14 casualties and 12 injured 🙁">got sillied)got sillied)got sillied)got sillied)got sillied)got sillied)</span></p> 
+<img src="https://dl.glitter-graphics.com/pub/1220/1220232mf765wb761.jpg" width="100%" height="50%"/>
 <h1> Here Are Some things About me </h1>
-<br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death
+<br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death<br><br><br><br><br>
 <div class="otherothersilly">
 <br>
 <br>
