--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@ css <s>coming soon</s> WIP
   <tr><th>10/02/2022</th><td>-</td><td><span title='took me way too long cause i used a semicolon and thats bad for some reason'>added new thingymabob to random code stuff</span> and added a funny flatulance to the about me page</td></tr>
   <tr><th>12/10/2022</th><td>-</td><td><span title='and a whole lot of new pages that i havent said about here'>theres now a GAY FLAG 😲😀😀😀😀 page</span></td></tr>
   <tr><th>31/10/2022</th><td>-</td><td><span title='🙂'>Oh God hes alive</span></td></tr>
+    <tr><th>1/11/2022</th><td>-</td><td><span title='my birthday oh My godnes'>completely revamped games.html</span></td></tr>
 
-</table>
+  </table>
 </div>
 <br>
 <br>
