--- a/index.html
+++ b/index.html
@@ -13,32 +13,77 @@
 	<style>
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#bf0000, rgba(0, 0, 0, 0))}
-	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #bf0000)}
+	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #000)}
 	body {background-color:#800000;color:#ffffff}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
-	a{background-color: #f44336;color: white;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block}
+	a{background-color: #f44336;color: white;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block;border-radius: 10px;}
+	.news{
+		background-color: #660101;
+		width: 1000px;
+		border-radius: 0px 0px 25px 25px;
+		padding-top: 10px;
+		padding-bottom: 50px;
+	}
+	.toparea{
+		background-color: #a30000;
+		width: 1250px;
+		border-radius: 0px 0px 25px 25px;
+		padding-top: 0px;
+		padding-bottom: 25px;
+	}
+	.menu{
+		background-color: #cc0202;
+		width: 1300px;
+		border-radius: 0px 0px 25px 25px;
+		padding-top: 70px;
+		padding-bottom: 10px;
+	}
+	.bottom{
+		background-color: #450000;
+		width: 750px;
+		border-radius: 0px 0px 25px 25px;
+		padding-top: 10px;
+		padding-bottom: 50px;
+	}
+	.linkies{
+		background-color: #cc0202;
+		width: 1000px;
+		border-radius: 0px 0px 25px 25px;
+		padding-top: 1px;
+		padding-bottom: 10px;
+	}
+	/*.topshelfspyvoiceline{
+		background-color: #a30000;
+		border-radius: 0px 0px 25px 25px;
+		padding-top: 1px;
+		padding-bottom: 10px;
+	}*/
 	</style>
 </head>
 
 <div class="header">
-	<br>
 	<center>
+	<div class="menu">
 		<h1>hi</h1>
 	<span id="menulinks">idex dot html</span>
 	<script src="links.js" type="text/javascript"></script>
+	</div>
 	</center>
-	<br>
+<center>
+<div class="toparea">
+<div class="linkies"><a href="https://batashock.github.io/"> check out Batashocks site!! </a> ​ ​ ​<a href="https://silvershorthair.github.io/"> check out Silvers Shorthairs site!! </a></div>
+<br>
+css <s>coming soon</s> WIP
+</center>
+</div>
 </div>
 
 <center>
-css <s>coming soon</s> WIP
-<br><br>
-<a href="https://batashock.github.io/"> check out Batashocks site!! </a>  
-
 <div class="news">
-  <h3>-- NEWS --</h3>
+  <h3>-- NEWS / CHANGELOG --</h3>
   <table>
+  <div class="topshelfspyvoiceline"><tr><th>Date</th><td></td><td>Update</td></tr></div>
   <tr><th>19/06/2021</th><td>-</td><td>I made this coooool website</td></tr>
   <tr><th>19/10/2021</th><td>-</td><td>i fixed the bug on the random code page with the timestamp thing</td></tr>
   <tr><th><p title="Im really sorry its not the 19th i was just bored">2/02/2022</p></th><td>-</td><td><p title="REAL?!?!?!?! OMG but only on this page for now cause im a silly">CSS?!?!?!??!!?!??!!!? WHAT?!?!!!! REAL?!?!?!?!!?!?!</p></td></tr>
@@ -50,10 +95,12 @@ css <s>coming soon</s> WIP
   <tr><th>10/02/2022</th><td>-</td><td><span title='took me way too long cause i used a semicolon and thats bad for some reason'>added new thingymabob to random code stuff</span> and added a funny flatulance to the about me page</td></tr>
   <tr><th>12/10/2022</th><td>-</td><td><span title='and a whole lot of new pages that i havent said about here'>theres now a GAY FLAG 😲😀😀😀😀 page</span></td></tr>
   <tr><th>31/10/2022</th><td>-</td><td><span title='🙂'>Oh God hes alive</span></td></tr>
-    <tr><th>1/11/2022</th><td>-</td><td><span title='my birthday oh My godnes'>completely revamped games.html</span></td></tr>
+    <tr><th>1/11/2022</th><td>-</td><td><span title='my birthday oh My godnes'>completely revamped games.html and index.html!!!!! (this page!!!)</span></td></tr>
 
   </table>
 </div>
+<div class="footer">
+<div class="bottom">
 <br>
 <br>
 
@@ -62,8 +109,8 @@ css <s>coming soon</s> WIP
 <blockquote class="twitter-tweet" data-lang="ar" data-theme="dark"><p lang="en" dir="ltr">i just realised how deep connect 4 is like you are literally connnecting peoples souls <a href="https://twitter.com/hashtag/deep?src=hash&amp;ref_src=twsrc%5Etfw">#deep</a></p>&mdash; Will94 (@WiII914) <a href="https://twitter.com/WiII914/status/1480504218465099777?ref_src=twsrc%5Etfw">١٠ يناير ٢٠٢٢</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 if u cant see this u need to check ur eyes
 <p class="white">if you cant see this then i understand why</p>
-</center>
-<div class="footer">
-<br><br><br><br><br>
-<a href="TheReal"> check out           site!! </a>  
 </div>
+<br><a href="TheReal"> check out           site!! </a><br><br><br><br>
+</div>
+</div>
+</center>
