--- a/aboutthem.html
+++ b/aboutthem.html
@@ -39,6 +39,22 @@
 	.otherothersilly{
 		background-image: url(https://i8.glitter-graphics.org/pub/56/56228evscd59iqn.gif);
 	}
+	
+	.FunnyApproved{
+		background-color: #000000;
+		width: 500px;
+		font-size: 15px;
+		border-radius: 50px;
+		padding-top: 25px;
+		padding-bottom: 25px;
+	}
+	.AboutThem{
+		background-color: #000000;
+		width: 1000px;
+		border-radius: 50px;
+		padding-top: 25px;
+		padding-bottom: 25px;
+	}
 	</style>
 </head>
 
@@ -57,6 +73,7 @@
 <br>
 <br>
 <br>
+<div class="AboutThem">
 <span style="text-decoration: none"><font color=#ff0000>H</font><font color=#f81206>e</font><font color=#f2250c>y</font><font color=#ec3712>~</font> <font color=#df5b1f>a</font><font color=#d96c25>l</font><font color=#d37c2b>l</font><font color=#cd8c31>!</font> <font color=#c0aa3e>W</font><font color=#bab744>e</font><font color=#b4c44a>l</font><font color=#aecf50>c</font><font color=#a7d957>o</font><font color=#a1e25d>m</font><font color=#9bea63>e</font> <font color=#8ff66f>t</font><font color=#88fa76>o</font> <font color=#7cfe82>m</font><font color=#76fe88>y</font> <font color=#69fa95>W</font><font color=#63f69b>e</font><font color=#5df1a1>b</font> <font color=#50e2ae>S</font><font color=#4ad9b4>i</font><font color=#44ceba>t</font><font color=#3ec3c0>e</font> <font color=#31a9cd>n</font><font color=#2b9bd3>y</font><font color=#258bd9>a</font><font color=#1f7bdf>~</font> <font color=#125aec>></font><font color=#0c48f2>o</font><font color=#0636f8><</font></span>
 <p class="p1">Hi im 	<img src="assets/img/mia.gif" width="100" height="100"></img></p>
 <p class="p1">Thats all you need to know iNO IT ISN'T NO IT ISN'T NO IT ISN'T NO IT IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIg</p>
@@ -65,6 +82,7 @@
 <br>
 <br>
 <br>
+</div>
 </center>
 <img src="https://i4.glitter-graphics.org/pub/837/837574f8u60iq9cg.gif" width="128" height="128"/>
 <img src="https://i6.glitter-graphics.org/pub/73/73556v6yfukqu88.gif" width="128" height="128"/>
@@ -225,6 +243,21 @@
 <br>
 <br>
 <br>
+<div class="FunnyApproved">
+<img src="https://text.glitter-graphics.net/heart/f.gif" onclick="silly('f')" border=0>
+<img src="https://text.glitter-graphics.net/heart/a.gif" onclick="silly('a')" border=0>
+<img src="https://text.glitter-graphics.net/heart/r.gif" onclick="silly('r')" border=0>
+<img src="https://text.glitter-graphics.net/heart/t.gif" onclick="silly('t')" border=0>
+<img src="https://text.glitter-graphics.net/heart/i.gif" onclick="silly('i')" border=0>
+<img src="https://text.glitter-graphics.net/heart/n.gif" onclick="silly('n')" border=0>
+<img src="https://text.glitter-graphics.net/heart/g.gif" onclick="silly('g')" border=0>
+<br> - This message was approved by the Funny Man 🙂
+<script>
+var Stinky = "";
+function silly(fart){if (fart == 'f') {Stinky = "";} else {Stinky = Stinky + fart;}if (Stinky == "ingratiating") {window.location.replace("ingratiation.html");}console.log(Stinky);}
+</script>
+</div>
+
 <br>
 <br>
 <br>
