--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@ css <s>coming soon</s> WIP
 </div>
 <div class="footer">
 <div class="bottom">
+<h3>-- NOTES FOR THE SITE --</h3>
+This site is best viewed on desktop. Certain things don't look good on mobile<br>
+<span title="but you can look at the console log thingy thats fine :grin:">Viewing the HTML is not a way to find secrets</span><br>
+<!-- I'm being serious -->
+Bugs and stuff can be reported to me (Contact is on about me)<br>
+<span id="farty" title="like hovering over certain text 😲">Some secrets are hidden very sneakily</span>
+
 <br>
 <br>
 
@@ -114,3 +121,9 @@ if u cant see this u need to check ur eyes
 </div>
 </div>
 </center>
+<script>
+	setTimeout(() => {
+	var farty = document.getElementById("farty");
+	farty.innerHTML = "Some secrets are hidden very sneakily (Like waiting a while on a page lmfao)";
+	}, "30000");
+</script>
