--- a/games.html
+++ b/games.html
@@ -39,6 +39,21 @@
 		padding-top: 100px;
 		padding-bottom: 100px;
 	}
+	.fts1embed{
+		background-color: #44bdff;
+		width: 711px;
+		border-radius: 10px;
+	}
+	.fts2embed{
+		background-color: #00290d;
+		width: 899px;
+		border-radius: 10px;
+	}
+	.fts4embed{
+		background-color: #9c4e00;
+		width: 1063px;
+		border-radius: 10px;
+	}
 	</style>
 </head>
 
@@ -69,7 +84,7 @@
 	<tr>
 	<th>
 	<div class="fts2">
-	<iframe frameborder="0" src="https://itch.io/embed/1508797?border_width=5&amp;bg_color=22b14c&amp;fg_color=000000&amp;link_color=ffffff&amp;border_color=ffffff" width="560" height="175"><a href="https://miagaming.itch.io/find-the-silvers-2">F ind hte SIVLERs 2 !!!!1!!!!11!1!1!1 by Mia</a></iframe>
+	<iframe frameborder="0" src="https://itch.io/embed/1508797?border_width=5&amp;bg_color=22b14c&amp;fg_color=000000&amp;link_color=ffffff&amp;border_color=00290d" width="560" height="175"><a href="https://miagaming.itch.io/find-the-silvers-2">F ind hte SIVLERs 2 !!!!1!!!!11!1!1!1 by Mia</a></iframe>
 	</div>
 	</th>
 	<td><h4>the find the silver 2</h4>A new look on the "Find the " Silver Franchise! Silver Returns with this Hit GAme "Find the Silver 2" where he uh he goes off the screen uh OH!<br><br>"A very good game, i love finding all the silvers, silver is very cute and it's funny when he hides but fucking fails miserably"<br>- Batashock, 1997</td>
@@ -84,6 +99,18 @@
 	</tr>
 </table>
 </div>
+<br><br><br><br>
+<!--
+<div class="fts1embed">
+<iframe frameborder="0" src="https://itch.io/embed-upload/6698382?color=44bdff" allowfullscreen="" width="691" height="370"><a href="https://miagaming.itch.io/findthesilver">Play Find The Silvers - Easter 2021 on itch.io</a></iframe>
+</div>
+<div class="fts2embed">
+<iframe frameborder="0" src="https://itch.io/embed-upload/5784301?color=000000" allowfullscreen="" width="879" height="409"><a href="https://miagaming.itch.io/find-the-silvers-2">Play F ind hte SIVLERs 2 !!!!1!!!!11!1!1!1 on itch.io</a></iframe>
+</div>
+<div class="fts4embed">
+<iframe frameborder="0" src="https://itch.io/embed-upload/6743711?color=9c4e00" allowfullscreen="" width="1043" height="541"><a href="https://miagaming.itch.io/find-the-silver-4">Play Find The Silvers 4 - Halloween 2022 on itch.io</a></iframe>
+</div>-->
+
 <!-- <div class="footer">
 <br><br><br><br><br>
 </div> --> 
