--- a/oldcode.html
+++ b/oldcode.html
@@ -7,60 +7,34 @@
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#2a8000, rgba(0, 0, 0, 0))}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #2a8000)}
-	body {background-color:#008080;color:#fdffff}
+	body {background-color:#000000;color:#ffffff}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
-	.links{background-color: #818181;color: fdffff;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block;outline-color: #818181;outline-style: outset;}
-	a{color:#010081; text-decoration: none;}
-	button{background-color: #818181;outline-color: #818181;outline-style: outset;}
-	.top{
-		background-color: #c3c3c3;
-		width: 90%;
-		outline-color: #818181;
-		outline-style: outset;
-		padding-top: 5px;
-		padding-bottom: 5px;
-		box-shadow: 5px 5px #2a5f55;
-	}
-	.middle{
-		background-color: #c3c3c3;
-		width: 700px;
-		height: 500px;
-		outline-color: #818181;
-		outline-style: outset;
-		padding-top: 25px;
-		padding-bottom: 25px;
-		position: relative;
-		box-shadow: 5px 5px #2a5f55;
-	}
-	h1{
-		text-shadow:
-		2px 2px 0 #818181; 
-	}
+	.links{background-color: #55ff00;color: black;padding: 5px 100px;text-align: center;text-decoration: strong;display: inline-block}
+	a{color:#55ff00}
+	button{background-color: #00ff00}
 	</style>
 	<script> 
 	var pee = 0;
 	function peecheck(){
 		if (pee == 30) {
-			document.write("<center><h1>QUITE UN FUNNY <br><br><br><br><br><br><a href='oldcode.html'>old page lmao</a><br><br><br><br>😡</h1></center>")
+			document.write("<center><h1>QUITE UN FUNNY <br><br><br><br><br><br><br><br><br><br>😡</h1></center>")
 		}
 	}
 	</script>
 </head>
 
-<div> <!--class=""-->
-<center>
+<div class="header">
 	<br>
-	<div class="top">
+	<center>
 	<h1> Random Code Stuff </h1>
 	<span id="menulinks">the univserse has me invisible face</span>
 	<script src="links.js" type="text/javascript"></script>
-	</div>
+	</center>
 	<br>
-</center>
 </div>
-<center><br>
-<div class="middle">
+<center><br><br><br>
+
 <a href='javascript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()'>Bataspam III</a> (Bookmark thing)
 
 <br><br>
@@ -85,7 +59,7 @@
 <td><span id="slidey"></span></td>
 </tr>
 </table>
-<div id="Gradient" style="outline-color: #818181;outline-style: outset;height:100px;width:75%;background-image:repeating-linear-gradient(90deg, #000000,#000000 10px,#ff0081 10px,#ff0081 20px);">
+<div id="Gradient" style="height:100px;width:75%;background-image:repeating-linear-gradient(90deg, #000000,#000000 10px,#2a8000 10px,#2a8000 20px);">
 </div>
 </div>
 <script>
@@ -95,12 +69,12 @@ var gradient = document.getElementById("Gradient");
 variablename.innerHTML = slider.value;
 slider.oninput = function() {
   variablename.innerHTML = this.value;
-  gradient.style.backgroundImage = "repeating-linear-gradient(90deg, #000000,#000000 "+this.value+"px,#ff0081 "+this.value+"px,#ff0081 "+this.value*2+"px)";
+  gradient.style.backgroundImage = "repeating-linear-gradient(90deg, #000000,#000000 "+this.value+"px,#2a8000 "+this.value+"px,#2a8000 "+this.value*2+"px)";
 }
 </script>
 
 
-</div>
+
 </center>
 <div id="funny">
 <script>
@@ -113,6 +87,6 @@ function funny(){
 funny();
 </script>
 </div>
-<div> <!--class="footer"-->
+<div class="footer">
 <br><br><br><br><br>
 </div>
