--- a/code.html
+++ b/code.html
@@ -42,7 +42,7 @@
 	var pee = 0;
 	function peecheck(){
 		if (pee == 30) {
-			document.write("<center><h1>QUITE UN FUNNY <br><br><br><br><br><br><a href='Archive/code.html'>old page lmao</a><br><br><br><br>😡</h1></center>")
+			document.write("<center><h1>QUITE UN FUNNY <br><br><br><br><br><br><a href='Archive/code.html'>old page lmao</a><br><a href='newcode.html'>new page lmao</a><br><br><br>😡</h1></center>")
 		}
 	}
 	</script>
