--- a/coolsites.html
+++ b/coolsites.html
@@ -4,7 +4,7 @@
     </title>
 	<meta name="description" content="PULLOUTYOURTEETHSEEWHATSUNDERNEATHPUTTHENEWONESINLOOKINDISBELIEF">
 	<script>
-	console.log("%c$WHY_ are you so !?!?!?Dead_nside_______", "font-size:4rem;background-image: repeating-linear-gradient(45deg,#55CDFC,#55CDFC 50px,#F7A8B8 50px,#F7A8B8 100px,#FFFFFF 100px,#FFFFFF 150px,#F7A8B8 150px,#F7A8B8 200px,#55CDFC 200px);");
+	console.log("%c$WHY_ are you so !?!?!?DeatLighted!", "font-size:4rem;background-image: repeating-linear-gradient(45deg,#55CDFC,#55CDFC 50px,#F7A8B8 50px,#F7A8B8 100px,#FFFFFF 100px,#FFFFFF 150px,#F7A8B8 150px,#F7A8B8 200px,#55CDFC 200px);");
 	</script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 	<style>
