--- a/ingratiation.html
+++ b/ingratiation.html
@@ -115,7 +115,7 @@ He has not asked permission before creating such link to build an &lt;/script a 
 </code>
 </div>
 <div class="toparea"><br><br><br>EVERYBREATHISANUPHILLBATTLE</div>
-<div class="news"></div>
+<div class="news">：ｇｒｉｎ：</div>
 <div class="bottom">
 <h1> Health </h1>
 <h3> be Health</h3>
