--- a/aboutthem.html
+++ b/aboutthem.html
@@ -215,6 +215,7 @@
 <img src="https://www.glitter-graphics.com/images/gallery/filtered.png" width="100%" height="25%"/>
 <img src="https://www.glitter-graphics.com/images/gallery/filtered.png" width="100%" height="25%"/>
 <img src="https://www.glitter-graphics.com/images/gallery/filtered.png" width="100%" height="25%"/>
+<a href="iwasbornintheechoboom.html"><img src="https://cur.glitter-graphics.net/pub/2853/2853719zxhy7bkpm6.gif" width="100%" height="25%"/></a>
 <img src="https://www.glitter-graphics.com/images/gallery/filtered.png" width="100%" height="25%"/>
 <img src="https://i5.glitter-graphics.org/pub/2609/2609375imm5gvawry.gif" width="100%" height="50%"/>
 <img src="https://www.glitter-graphics.com/images/gallery/filtered.png" width="100%" height="25%"/>
