--- a/blog.html
+++ b/blog.html
@@ -97,27 +97,12 @@ Mia's Blog or some shit lmfao
 
 <center>
 <div class="news">
-  <h3>-- NEWS / CHANGELOG --</h3>
-  <table>
-  <div class="topshelfspyvoiceline"><tr><th>Date</th><td></td><td>Update</td></tr></div>
-  <tr><th>19/06/2021</th><td>-</td><td>I made this coooool website</td></tr>
-  <tr><th>19/10/2021</th><td>-</td><td>i fixed the bug on the random code page with the timestamp thing</td></tr>
-  <tr><th><p title="Im really sorry its not the 19th i was just bored">2/02/2022</p></th><td>-</td><td><p title="REAL?!?!?!?! OMG but only on this page for now cause im a silly">CSS?!?!?!??!!?!??!!!? WHAT?!?!!!! REAL?!?!?!?!!?!?!</p></td></tr>
-  <tr><th>3/02/2022</th><td>-</td><td>gave random code page css and scroll thingy</td></tr>
-  <tr><th>4/02/2022</th><td>-</td><td><p title='"snazzy" "capitalisation inconsistencies" am i okay?'>replaced youtube button with snazzy new about me page and fixed capitalisation inconsistencies on the other buttons</p></td></tr>
-  <tr><th>5/02/2022</th><td>-</td><td>Changed the way the menu thingy link bar at the top works, now I don't have to update all the pages to update it.</td></tr>
-  <tr><th></th><td></td><td>I also gave the 404 page css and actual content and removed unused files from the dir and made new tags page</td></tr>
-  <tr><th>6/02/2022</th><td>-</td><td>descriptosn</td></tr>
-  <tr><th>10/02/2022</th><td>-</td><td><span title='took me way too long cause i used a semicolon and thats bad for some reason'>added new thingymabob to random code stuff</span> and added a funny flatulance to the about me page</td></tr>
-  <tr><th>12/10/2022</th><td>-</td><td><span title='and a whole lot of new pages that i havent said about here'>theres now a GAY FLAG 😲😀😀😀😀 page</span></td></tr>
-  <tr><th>31/10/2022</th><td>-</td><td><span title='🙂'>Oh God hes alive</span></td></tr>
-    <tr><th>1/11/2022</th><td>-</td><td><span title='my birthday oh My godnes'>completely revamped games.html and index.html!!!!! (this page!!!)</span></td></tr>
-
-  </table>
+Hour hands gone and now you're feeling strange
 </div>
 <div class="footer">
 <br><br>
 <div class="bottom">
+<embed type="text/html" src="040.html" width="75%" height="500px">
 <h2>wow blog</h2>
 cant want to use this a Lot
 <br>
