--- a/GIVEMESOMEBODYTO.......html
+++ b/GIVEMESOMEBODYTO.......html
@@ -116,7 +116,7 @@
 <div class="gracef"> and it is hurti<span onclick="fart();">ng us all</a> </div>
 <script>
 function fart(){
-	alert("fart");
+	alert("check this later lmao");
 }
 </script>
 <br>
