--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,14 @@
     </title>
 	<meta name="description" content="CW: EYESTRAIN, FLASHING GIFS AND SHITTT">
 	<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+	<!--<script>
+		var img = new Image();
+		var img2 = new Image();
+		var img3 = new Image();
+		img.src = "assets/art/caution.gif";
+		img2.src = "assets/art/caution2.gif";
+		img3.src = "assets/art/caution3.gif";
+	</script>-->
 	<style>
 	html, body {margin:0;padding:0;}
 	body {
@@ -32,22 +40,27 @@
 		background: black url("assets/art/caution.gif") repeat-x;
 		background-size: 100px 50px;
 		height: 50px;
+		width: 750px;
 	}	
 	.caution2 {
 		background: black url("assets/art/caution2.gif") repeat-x;
 		background-size: 100px 50px;
 		height: 50px;
+		width: 750px;
 	}
 	.caution3 {
 		background: black url("assets/art/caution3.gif") repeat-x;
 		background-size: 100px 50px;
 		height: 50px;
+		width: 750px;
 	}
 	.shitty {
 		background: black url("assets/art/bg3.gif");
 		background-size: 50px 50px;
+		width: 500px;
 	}
 	</style>
+
 </head>
 <body>
 <center>
@@ -62,20 +75,20 @@
 	<br>
 </div>
 <div class="caution"> </div>
-<div style="background: black; color: white"><br> hiiii, a cool thingy i mADE :astonished:<br><br></div>
+<div style="background: black; color: white;width: 750px;"><br> hiiii, a cool thingy i mADE :astonished:<br><br></div>
 <div class="caution" style="transform: scaleY(-1); background-position: 50px;"> </div>
 
 <div class="caution2"> </div>
-<div style="background: black; color: white"><br> what more FRAMES does to a mf<br>what theres no reason for them to be desynced they were'nt earlier then i changed teh background now they arez<br>ANDNOWTHEYARESYNCEDAGAIN<br><br></div>
+<div style="width: 750px;background: black; color: white"><br> what more FRAMES does to a mf<br>what theres no reason for them to be desynced they were'nt earlier then i changed teh background now they arez<br>ANDNOWTHEYARESYNCEDAGAIN<br><br></div>
 <div class="caution2" style="transform: scaleY(-1); background-position: 50px;"> </div>
 
 <div class="caution3"> </div>
-<div style="background: black; color: white"><br>even more frames<br>fuckkk they desync because they don't load at the same time aaaaAA<br><br></div>
+<div style="width: 750px;background: black; color: white"><br>even more frames<br>fuckkk they desync because they don't load at the same time aaaaAA<br>at least thats what i think ;(<br><br></div>
 <div class="caution3" style="transform: scaleY(-1); background-position: 50px;"> </div>
 
 <br>
 
-<div class="shitty"> hiiii<br><br><br><br><br> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+<div class="shitty"> hiiii<br><br><br><br><br> <br><br><br><br><br><br><br><br><br><br><br></div>
 <br>
 </center>
 </body>
