--- a/hallway.html
+++ b/hallway.html
@@ -3,8 +3,8 @@
     Uaeaeae
     </title>
 	<meta name="twitter:card" content="summary_large_image">
-	<meta content="peeig" property="og:title" />
-    <meta content="peapepaepaepaepapeapepaepae" property="og:description" />
+	<meta content="Hallway" property="og:title" />
+    <meta content="Hallway" property="og:description" />
     <meta content="https://miastonished.github.io/flavour.html" property="og:url" />
     <meta content="https://miastonished.github.io/assets/art/hallway.png" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
@@ -20,6 +20,18 @@
 </head>
 <body>
 <center>
-<img src="assets/art/hallway.png" width="100%"/>
+<script>
+function farty(x) {
+	x.src = "ass";
+	x.onmouseover = "";
+	setTimeout(() => {  x.src = "assets/slightly-smiling-face.png"; }, 200);
+	setTimeout(() => {  x.src = "assets/MAN.png"; }, 400);
+	setTimeout(() => {  window.location.href = "lndex.html"; }, 1000);
+	
+	
+}
+</script>
+<br><br><br>
+<img onmouseover="farty(this);" src="assets/art/hallway.png" width="100px"/>
 </center>
 </body>
