--- a/aboutthem.html
+++ b/aboutthem.html
@@ -8,12 +8,24 @@
 	</script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 	<style>
-	html, body {margin:0;padding:0;}
+	html, body {margin:0;padding:0;background-color:#000000;}
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
-	body {
+	.encompass {
 		background-image: url(https://dl.glitter-graphics.com/pub/590/590935ankbyj1xx4.gif), url("assets/img/glitter.gif");
 		color:#ffffff;
 		font-size: 25px;
+		width: 1000px;
+		float: right;
+	}	
+	.sidebar {
+		background-image: url("https://dl.glitter-graphics.com/pub/3370/3370126el3lbqrhs5.jpg");
+		color:#ffffff;
+		font-size: 25px;
+		width: 200px;
+		height: 100%;
+		position: fixed;
+		outline: #000000 solid 3px;
+		float: left;
 	}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
@@ -27,7 +39,12 @@
 	.othersilly{
 	    color: #BCBCBC;
 		background-image: url(https://i1.glitter-graphics.org/pub/93/93421juhsy4hav3.gif);
-		outli
+		outline: fart;
+	}
+	.aboutme{
+		background-image: url("https://i5.glitter-graphics.org/pub/1030/1030855h2l3mzl6in.gif");
+		outline: fart;
+		width: 500px;
 	}
 	.silly{
 	    color: #000000;
@@ -49,20 +66,40 @@
 		padding-bottom: 25px;
 	}
 	.AboutThem{
+		background-image: url('http://dl8.glitter-graphics.net/pub/1502/1502608azv6igyeoi.png');
 		background-color: #000000;
-		width: 1000px;
-		border-radius: 50px;
+		width: 900px;
 		padding-top: 25px;
 		padding-bottom: 25px;
+		outline: #000000 dashed 10px;
+	}
+	.pagee {
+		width: 1200px;
+		background-color: white;
+		margin: auto;
+	}
+	marquee {
+		pointer-events: none;
 	}
 	</style>
 </head>
-
+<body>
+<div class="pagee">
+<div class="sidebar">
+<br>
+<center>
+hi im  MIA<br>
+<img src="https://dl.glitter-graphics.com/pub/473/473216e7oq2ztyev.gif" width="190px"/><br>
+<img src="assets/img/unavaliable.png" width="190px" height="190px"/><br>
+<img src="https://i7.glitter-graphics.org/pub/2089/2089657nscrbi2f5z.jpg" width="190px" height="190px"/><br>
+</center>
+</div>
+<div class="encompass">
 <div> <!--class="header"--->
 	<br>
 	<center>
 	<img src="assets/img/aboutme.gif" width="1000" height="100"></img><br>
-	<span id="menulinks">GOTOCALIFORNIABUTLETMEWARNYATHEPEOPLETHE)!!!!</span> ​ ​ ​<a href="egodeath.php.php.php.html.html.php" class="links">EGO DEATH</a>
+	<span id="menulinks">GOTOCALIFORNIABUTLETMEWARNYATHEPEOPLETHE)!!!!</span> ​ ​ ​<a style="background-image: url('http://dl6.glitter-graphics.net/pub/103/103816qjmqidmirn.jpg');" href="egodeath.php.php.php.html.html.php" class="links">EGO DEATH</a>
 	<script src="links.js" type="text/javascript"></script>	</center>
 	</center>
 	<br>
@@ -79,10 +116,13 @@
 <p class="p1">Thats all you need to know iNO IT ISN'T NO IT ISN'T NO IT ISN'T NO IT IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIg</p>
 <p class="p1">I'm a goth-kawaii gal that loves to draw and codee~~</p>
 <p class="p1"><a href="TheReal"> My Youtube </a></p>
-<br>
-<br>
+<p class="p1"><a href="https://miastonished.tumblr.com"> My Tumblr XP</a></p>
+<p class="p1"><a href="https://miastonished.tumblr.com"> My... MYSPACE!!!</a></p>
+<p class="p1"><a href="https://blingee.com/profile/egodeath"> My Blingee</a></p>
 <br>
 </div>
+<br>
+<br>
 </center>
 <img src="https://i4.glitter-graphics.org/pub/837/837574f8u60iq9cg.gif" width="128" height="128"/>
 <img src="https://i6.glitter-graphics.org/pub/73/73556v6yfukqu88.gif" width="128" height="128"/>
@@ -183,8 +223,10 @@
 <br>
 <p class="p1"><span title="in a freak accident involving 14 casualties and 12 injured 🙁">got sillied)got sillied)got sillied)got sillied)got sillied)got sillied)</span></p> 
 <img src="https://dl.glitter-graphics.com/pub/1220/1220232mf765wb761.jpg" width="100%" height="50%"/>
+<div class="aboutme">
 <h1> Here Are Some things About me </h1>
 <br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death<br>- Ego Death<br><br><br><br><br>
+</div>
 <div class="otherothersilly">
 <br>
 <br>
@@ -224,6 +266,9 @@
 <br>
 <br>
 <br>
+My web:<br>
+<embed src="justheartsandwallsofart.swf" width="550" height="400"></embed>
+<br>(i used "flash" XP)
 <br>
 <br>
 <br>
@@ -276,5 +321,9 @@ WATCH THE NEW STAR DANCE UPON THE NIGHT SKY<br>
 <br><br><br>
 </div>
 </div> 
+</div>
+</div>
 <img src="assets/img/black.gif" width="5" height="6"></img>
+live strange get ):PL!{W: (gg for finding this?)
 <img src="https://i7.glitter-graphics.org/pub/2701/2701407d0cc3f575j.gif" width="100%" height="25%" style="transform: scaleY(-1);"/>
+</body>
