--- a/ingratiation.html
+++ b/ingratiation.html
@@ -1,15 +1,8 @@
 <head>
 	<title>
-    Mia's EPIC Site
+    Ingratiation
     </title>
-	<meta name="description" content="This site is very epic!">
-	<script>
-	function title(){
-		document.title = ""+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+" Mia's EPIC Site "+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random());
-		setTimeout(title, 100);
-	}	
-	title()
-	</script>
+	<meta name="description" content="Do not trust the facade">
 	<style>
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#bf0000, rgba(0, 0, 0, 0))}
@@ -28,6 +21,7 @@
 		position: relative;
 		top: -10px;
 		outline: 5px solid black;
+		background-image: url('http://dl10.glitter-graphics.net/pub/976/976240sqrrsjlejc.jpg');
 	}
 	.toparea{
 		background-color: #5cffff;
@@ -37,10 +31,12 @@
 		padding-bottom: 25px;
 		z-index: 0;
 		position: relative;
+		background-image: url('http://dl10.glitter-graphics.net/pub/976/976240sqrrsjlejc.jpg');
 		top: -10px;
 		outline: 5px solid black;
 	}
 	.menu{
+		background-image: url('https://cur.glitter-graphics.net/pub/3630/3630016bojajqy2rb.jpg');
 		background-color: #33fdfd;
 		width: 1300px;
 		border-radius: 0px 0px 25px 25px;
@@ -54,6 +50,7 @@
 	.bottom{
 		background-color: #baffff;
 		width: 750px;
+		background-image: url('https://i10.glitter-graphics.org/pub/49/49090fyqhb8rb91.gif');
 		border-radius: 0px 0px 25px 25px;
 		padding-top: 50px;
 		padding-bottom: 50px;
@@ -114,7 +111,7 @@ Please check his &lt;a href="http://www.amazon.com/gp/product/0809724502/ref=olp
 He has not asked permission before creating such link to build an &lt;/script a curse with his back in chains: one with all these clues and clues from past moments will end with the final final curse: we do not need such guidance before making such a new  spell that may&lt;br&gt; help!! &lt;div&gt;&lt;a href=" https ://lions gate. com/domain-control -   " &gt;" &lt;/a&gt;&lt;/div&gt;&lt;div rel ="mofocaloid"- &lt;a href="https://dl. acm. uaclustool-webappDo not trusthttp link &lt;a href=" http: // www.Funnyman / -  &gt; " / ".
 </code>
 </div>
-<div class="toparea"><br><br><br>EVERYBREATHISANUPHILLBATTLE</div>
+<div class="toparea"><br><br><br><span title="the funny man wants you to <<THINK hes Nice">EVERYBREATHISANUPHILLBATTLE</span></div>
 <div class="news">：ｇｒｉｎ：</div>
 <div class="bottom">
 <h1> Health </h1>
