--- a/Laugh.html
+++ b/Laugh.html
@@ -35,6 +35,7 @@
 	}
 	::-webkit-scrollbar-thumb {
 		background: #888;
+		max-height: 10px;
 		background-image: url(assets/img/youfunnymanyouf.gif);
 	}
 	</style>
