--- a/Timer.html
+++ b/Timer.html
@@ -209,8 +209,7 @@
 <div class="Silly5"></div>
 <div class="Silly2"></div>
 <div class="Silly3"></div>
-<div class="Silly6">You will never see the full picture
-</div>
+<div class="Silly6">You will never see the <a href="door.html">full picture</a></div>
 <div class="Silly2"></div>
 <div class="Silly3"></div>
 <div class="Silly4"></div>
