--- a/games.html
+++ b/games.html
@@ -91,11 +91,27 @@
 	</tr>
 	<tr>
 	<th>
+	<div class="fts3">
+	<img src="assets/tilingimage2.png" width="560" height="175"/>
+	</div>
+	</th>
+	<td><h4>who</h4>Who Who Who<br>PLZ ALL PLZ HELP I DON'T WANT TO<br>popular and Well rated  <br> Click <span title="https://miagaming.itch.io/find-the-silver-3"> here</span> To see The REvieS!!!! is very cute and it's funny when he hides but fu£ÃƒÆ’Ã¢â‚y"<br>- BFind the 4 Fin997</td>
+	</tr>
+	<tr>
+	<th>
 	<div class="fts4">
 	<iframe frameborder="0" src="https://itch.io/embed/1726718?border_width=5&amp;bg_color=360064&amp;fg_color=ffffff&amp;link_color=f79600&amp;border_color=ff9520" width="560" height="175"><a href="https://miagaming.itch.io/find-the-silver-4">Find The Silvers 4 - Halloween 2022 by Mia</a></iframe>
 	</div>
 	</th>
 	<td> Find the 4 Find the 4<br>"Find the Silvers has always been a series that's been revolutionizing the genre of hidden object games. But with Find the Silvers 4" "sleep"<br>"This brings it to a whole new level And so impressive that they've always been developed by one person. Why, if they were developed by a number of people that is more than one, like, for example, three, it'd just ruin the franchise. Good thing that'll never happen." - Silver Shorthair, 100 Wow thats a Big Number!</td>
+	</tr>
+	<tr>
+	<th>
+	<div class="ftss">
+	<img src="assets/MAN.png" width="560" height="175"/>
+	</div>
+	</th>
+	<td> TBA?!?!</td>
 	</tr>
 </table>
 </div>
